Bug 1395322 Part 1: Enforce consistent use of nsIDOMCSSRule enums for Servo rule types. r=xidorn

MozReview-Commit-ID: DmfaYCe9QAY